# libmtk

./: .gitignore  Doxyfile  LICENSE  README.md  meson.build
.github/workflows/: docs.yml
docs/: pitfalls.md
docs/site/: build.sh  mdlinks.lua  site.css
include/mtk/: mtk.h
src/: button.c  core.c  draw.c  entry.c  filedlg.c  frame.c  internal.h  label.c  layout.c  listbox.c  menubar.c  sash.c  scrollbar.c  spinbox.c  tabs.c  tree.c
tutorial/: 01-first-window.md  02-events-layout-timers.md  03-standard-widgets.md  04-custom-widgets.md  05-menus-dialogs-resources.md  06-scrolling-content.md  07-trees-lazy-data.md  08-background-work.md  09-pixels-xrender.md  10-layouts.md  README.md  a-file-manager.md  b-log-viewer.md  c-paint-program.md
tutorial/examples/: 01-hello.c  02-counter.c  03-convert.c  03-tasks.c  04-lights.c  05-notes.c  06-pager.c  07-dirtree.c  08-dusage.c  09-pixels.c  10-contacts.c  a-mfm.c  b-tailview.c  c-mpaint.c  meson.build
