tut_examples = [
  ['tut-01-hello', '01-hello.c'],
  ['tut-02-counter', '02-counter.c'],
  ['tut-03-convert', '03-convert.c'],
  ['tut-03-tasks', '03-tasks.c'],
  ['tut-04-lights', '04-lights.c'],
  ['tut-05-notes', '05-notes.c'],
]

foreach e : tut_examples
  executable(e[0], e[1], dependencies: mtk_dep)
endforeach
